--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,6 @@
     <h1>I am Ankijit Roy</h1>
     <p>A webite Developing freelancer</p>
     <p>Proficient in MERN stack dvelopment</p>
-    <a href="/Dowload"><button class="bn632-hover bn26" >Download-CV</button></a>
+    <a href="https://resume.io/r/IDxialeZE"><button class="bn632-hover bn26" >Download-CV</button></a>
 </div>
 <%- include("partials/footer.ejs") %> 
