--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,43 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="javascript/tabschange.js"></script>
-<script src="javascript/responsivemenu.js"></script>
+<script>
+$(document).ready(function() {
+    // Function to open and close the menu
+    function openmenu() {
+        if ($('#bar3').css('display') !== 'none') {
+            $('#bar3').css('display', 'none');
+            $('#bar1').css('transform', 'rotate(53deg)');
+            $('#bar2').css('transform', 'rotate(-53deg)');
+            $('#bar2').css('margin', '-4px 0 0 0');
+            $('#menumain').css('right', '-28px');
+        } else {
+            $('#bar3').css('display', 'block');
+            $('#bar1').css('transform', 'rotate(0deg)');
+            $('#bar2').css('transform', 'rotate(0deg)');
+            $('#bar2').css('margin', '4px 0 0 0');
+            $('#menumain').css('right', '-200px');
+        }
+    }
+
+    // Attach the openmenu function to the click event of the responsivemenu div
+    $('#responsivemenu').click(openmenu);
+});
+</script>
+<script>
+
+
+let tab = document.getElementsByClassName('tab');
+        let tabdescription = document.getElementsByClassName('tabdescription');
+        function opentab(tabname){
+            for(x of tab){
+                x.classList.remove("activetab")
+            }
+            for(y of tabdescription){
+                y.classList.remove("activetabdescription")
+            }
+             event.currentTarget.classList.add("activetab");
+            document.getElementById(tabname).classList.add("activetabdescription");
+        }
+</script>
 
 </body>
 
